[package]
name = "SLViewerTauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-alpha.8", features = [] }
autocxx-build = "0.26.0"
bindgen = "0.65"
miette = "5.10.0"


[dependencies]
tauri = { version = "2.0.0-alpha.11", features = [] }
tauri-plugin-window = "2.0.0-alpha.1"
tauri-plugin-shell = "2.0.0-alpha.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "*"
imageproc = "*"
wasm-bindgen = "0.2.87"
autocxx = "0.26.0"
cxx = "1.0"
miette = "5.10.0"
base64 = "0.21.2"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
